usability changes for file interpretation step in dataset upload workflow

--- a/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
@@ -63,76 +63,93 @@
 </div>
 <div class="workbench-card-sidepanel-border"></div>
 <div class="workbench-card-sidepanel-body">
-    <div class="file-workbench-filter">
-        <h2 class="file-workbench-filter-header">{% trans 'Datasets' %}</h2>
-        <input type="text" class="form-control" style="width: 100%; height:initial" placeholder="{% trans 'e.g.: .txt' %}"
-            data-bind="textInput: digitalResourceFilter"></input>
-        <span class="clear-node-search" data-bind="visible: digitalResourceFilter().length > 0, click: function() { digitalResourceFilter(''); }"><i
-                class="fa fa-times-circle"></i></span>
-    </div>
-    <div class='file-workbench-files'>
-        <!-- ko foreach: { data: filteredDigitalResources, as:'digitalResource'} -->
-        <div class='file-workbench-file' style="display: inline-flex;"
-            data-bind="css: {'selected-photo': ko.unwrap($parent.selectedDigitalResource) === digitalResource}, click: function(ri){
-                $parent.selectedDigitalResource(ri);
-            }, container: '.file-workbench-files'">
-            <i role="presentation" data-bind="class: 'fa fa-file'"></i>
-            <div class='file-name' data-bind="text: digitalResource.resource.Name.Name_content['@display_value']"></div>
+    <div data-bind="visible: showDatasetList">
+        <div class="file-workbench-filter">
+            <h2 class="file-workbench-filter-header">{% trans 'Datasets' %}</h2>
+            <input type="text" class="form-control" style="width: 100%; height:initial" placeholder="{% trans 'e.g.: .txt' %}"
+                data-bind="textInput: digitalResourceFilter"></input>
+            <span class="clear-node-search" data-bind="visible: digitalResourceFilter().length > 0, click: function() { digitalResourceFilter(''); }"><i
+                    class="fa fa-times-circle"></i></span>
         </div>
-        <!-- /ko -->
-    </div>
-
-    <div class="file-workbench-filter">
-        <h2 class="file-workbench-filter-header">{% trans 'Data Files' %}</h2>
-        <input type="text" class="form-control" style="width: 100%; height:initial" placeholder="{% trans 'e.g.: .txt' %}"
-            data-bind="textInput: fileFilter"></input>
-        <span class="clear-node-search"
-            data-bind="visible: fileFilter().length > 0, click: function() { fileFilter(''); }"><i
-                class="fa fa-times-circle"></i></span>
-    </div>
-    <div class='file-workbench-files'>
-        <!-- ko foreach: { data: filteredFiles, as:'file'} -->
-        <div class='file-workbench-file' style="display: inline-flex;" data-bind="css: {'selected-photo': ko.unwrap($parent.selectedFile) === file}, click: function(f){
-                $parent.selectedFile(f);
-            }, container: '.file-workbench-files'">
-            <i role="presentation" data-bind="class: 'fa fa-file'"></i>
-            <div class='file-name' data-bind="text: file.file_details[0].name"></div>
+        <div class='file-workbench-files'>
+            <!-- ko foreach: { data: filteredDigitalResources, as:'digitalResource'} -->
+            <div class='file-workbench-file' style="display: inline-flex;"
+                data-bind="click: function(ri){
+                    $parent.selectedDigitalResource(ri);
+                    $parent.showDatasetList(false);
+                    $parent.showFileList(true);
+                }, container: '.file-workbench-files'">
+                <i role="presentation" data-bind="class: 'fa fa-file'"></i>
+                <div class='file-name' data-bind="text: digitalResource.resource.Name.Name_content['@display_value']"></div>
+            </div>
+            <!-- /ko -->
         </div>
-        <!-- /ko -->
     </div>
-
-    <div data-bind="visible: selectedFile()?.file_details?.[0] != undefined && (selectedFile().file_details[0].name.endsWith('txt') || selectedFile().file_details[0].name.endsWith('dx'))">
-        <div data-bind="hidden: currentRendererValid">
-            <div style="border: 1px solid #ddd; background-color: #F8735A; display: flex; color: #fff; padding: 10px 0px; align-items: center;">
-                <i style="padding: 0px 10px;" role="presentation" class="fa fa-exclamation-triangle"></i>
-                <div>{% trans 'The current renderer is not valid.  Please select a different renderer.' %}</div>
+    <div data-bind="visible: showFileList">
+        <button class="btn" style="background: #9490EE;color: #eee;" data-bind=" click: function(){showDatasetList(true); showFileList(false)}">
+            <i class="fa fa-list" style="color: #eee"></i> {% trans "Show Dataset List" %}</button>
+        <div class="file-workbench-filter">
+            <h2 class="file-workbench-filter-header">{% trans 'Data Files' %}</h2>
+            <input type="text" class="form-control" style="width: 100%; height:initial" placeholder="{% trans 'e.g.: .txt' %}"
+                data-bind="textInput: fileFilter"></input>
+            <span class="clear-node-search"
+                data-bind="visible: fileFilter().length > 0, click: function() { fileFilter(''); }"><i
+                    class="fa fa-times-circle"></i></span>
+        </div>
+        <div class='file-workbench-files'>
+            <!-- ko foreach: { data: filteredFiles, as:'file'} -->
+            <div class='file-workbench-file' style="display: inline-flex;" data-bind="click: function(f){
+                    $parent.selectedFile(f);
+                    $parent.showFileInfo(true);
+                    $parent.showFileList(false);
+                }, container: '.file-workbench-files'">
+                <i role="presentation" data-bind="class: 'fa fa-file'"></i>
+                <div class='file-name' data-bind="text: file.file_details[0].name"></div>
+            </div>
+            <!-- /ko -->
+        </div>
+    </div>
+    <div data-bind="visible: showFileInfo">
+        <button class="btn" style="background: #9490EE;color: #eee;" data-bind=" click: function(){showFileList(true); showFileInfo(false); selectedRenderer(undefined)}">
+            <i class="fa fa-list" style="color: #eee"></i> {% trans "Show File List" %}</button>
+        
+        <div style="margin-top: 10px">
+            <span>{% trans "File" %}:</span>
+            <span style="font-weight: bold" data-bind="text: selectedFile()?.file_details[0].name"></span>
+        </div>
+        <div data-bind="visible: selectedFile()?.file_details?.[0] != undefined && (selectedFile().file_details[0].name.endsWith('txt') || selectedFile().file_details[0].name.endsWith('dx'))">
+            <div data-bind="hidden: currentRendererValid">
+                <div style="border: 1px solid #ddd; background-color: #F8735A; display: flex; color: #fff; padding: 10px 0px; align-items: center;">
+                    <i style="padding: 0px 10px;" role="presentation" class="fa fa-exclamation-triangle"></i>
+                    <div>{% trans 'The current renderer is not valid.  Please select a different renderer.' %}</div>
+                </div>
+            </div>
+            <div class="format-select">
+                <input style="display:inline-block; margin-top: 70px;"
+                data-bind="select2Query: {
+                    select2Config: {
+                        clickBubble: true,
+                        disabled: false,
+                        data: formats(),
+                        value: selectedFileFormat,
+                        allowClear: true,
+                        multiple: false,
+                        placeholder: {% trans "'Available Formats'" %}}}" >
             </div>
         </div>
-        <div class="format-select">
-            <input style="display:inline-block; margin-top: 70px;"
-            data-bind="select2Query: {
-                select2Config: {
-                    clickBubble: true,
-                    disabled: false,
-                    data: formats(),
-                    value: selectedFileFormat,
-                    allowClear: true,
-                    multiple: false,
-                    placeholder: {% trans "'Available Formats'" %}}}" >
+        <div style="display: flex; flex-direction: column;">
+            <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-end;">
+                <h2 class="file-workbench-filter-header">{% trans 'File Parameters' %}</h2>
+            </div>
+            <textarea data-bind="textInput: fileStatementParameter" rows="4" class="form-control" style="width: 100%; height:initial" 
+            placeholder="{% trans 'e.g.: .txt' %}"></textarea>
         </div>
-    </div>
-    <div style="display: flex; flex-direction: column;">
-        <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-end;">
-            <h2 class="file-workbench-filter-header">{% trans 'File Parameters' %}</h2>
-        </div>
-        <textarea data-bind="textInput: fileStatementParameter" rows="4" class="form-control" style="width: 100%; height:initial" 
-        placeholder="{% trans 'e.g.: .txt' %}"></textarea>
-    </div>
 
-    <div>
-        <h2 class="file-workbench-filter-header">{% trans 'File Interpretation' %}</h2>
-        <textarea data-bind="textInput: fileStatementInterpretation" rows="4" class="form-control" style="width: 100%; height:initial"
-        placeholder="{% trans 'e.g.: .txt' %}"></textarea>
+        <div>
+            <h2 class="file-workbench-filter-header">{% trans 'File Interpretation' %}</h2>
+            <textarea data-bind="textInput: fileStatementInterpretation" rows="4" class="form-control" style="width: 100%; height:initial"
+            placeholder="{% trans 'e.g.: .txt' %}"></textarea>
+        </div>
     </div>
 </div>
 <div class="workbench-button-panel">
