--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -35,9 +35,9 @@
 
     <div class="iiif-image-tools upload-dataset-select-dataset-files">
         <!--ko if: annotations().length > 0-->
-        <div style="width:100%; display: flex; justify-content: center;">
-            <button class="btn" style="background: #9490EE;color: #eee;" data-bind="visible: self.showDatasetDetails, click: function(){self.showDatasetDetails(false)}">
-                <i class="fa fa-list" style="color: #eee"></i> {% trans "Show Sampled Area List" %}</button>
+        <div style="width:100%; display: flex;">
+            <button class="btn" style="background: #9490EE;color: #fff;" data-bind="visible: self.showDatasetDetails, click: function(){self.showDatasetDetails(false)}">
+                <i class="fa fa-list" style="color: #fff"></i> {% trans "Show Sampled Area List" %}</button>
         </div>
 
         <div style="margin-top:10px" data-bind="visible: !self.showDatasetDetails()">
@@ -56,8 +56,8 @@
                                     <div data-bind="visible: !part.hasCurrentObservation()">
                                         <i class="fa fa-lock" style="color: black"></i>
                                     </div>
-                                    <div data-bind="visible: part.hasCurrentObservation() && part.datasetId()">
-                                        ({% trans "New" %})
+                                    <div data-bind="visible: part.hasCurrentObservation() && part.datasetId()"><span data-bind="text: console.log()"></span>
+                                        ({% trans "New" %}<span data-bind="text: ko.unwrap(part?.datasetFiles)?.length ? ' - ' + ko.unwrap(part?.datasetFiles)?.length : ''"></span>)
                                     </div>
                                 </div>
   
@@ -83,8 +83,11 @@
                                 placeholder: {% trans "'Available Formats'" %}}}" >
                     </div>
                     <div style="margin-bottom: 10px" data-bind="visible: selectedPartDefaultFormat() != undefined">
-                        <span>{% trans "Default Format" %}:</span>
+                        <span>{% trans "Default Text File Format" %}:</span>
                         <span style="font-weight: bold" data-bind="text: formats().find((x) => x.id == ko.unwrap(selectedPartDefaultFormat))?.text"></span>
+                    </div>
+                    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9;" data-bind="visible: selectedPartDefaultFormat() != undefined">
+                        <span>{% trans "Supported image files and PDF files are automatically detected and displayed." %}</span>
                     </div>
                     <div data-bind="visible: selectedPartDefaultFormat() != undefined || !selectedPartHasCurrentObservation()">
                         <div class="dataset-name">
