--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -42,6 +42,9 @@
 
         <div style="margin-top:10px" data-bind="visible: !self.showDatasetDetails()">
             <label class="control-label">{% trans "Sampled Locations" %}</label>
+            <div style="margin-bottom: 10px; border: 1px solid rgb(221, 221, 221); padding: 5px; background-color: rgb(249, 249, 249);">
+                <span>{% trans "Select a location or area to upload or view files." %}</span>
+            </div>
             <input type="text" class="form-control" style="width: 100%;" placeholder="Filter" data-bind="textInput: partFilter">
         </div>
         <div class="panel">
@@ -51,7 +54,7 @@
                         <!--ko if: self.partFilter() === "" || part.displayname.toLowerCase().includes(self.partFilter().toLowerCase()) -->
                         <div class="panel">
                             <a role="button" data-parent="#parts-panel"  aria-expanded="false" data-bind="click: function(){ $parent.showDatasetDetails(true); $parent.selectedPart(part); }, attr: { href: '#' + part.tileid, 'aria-expanded': $index == 0 ? 'true' : 'false' }">
-                                <div style="height: 35px; padding: 10px;display: flex; align-items:center;" class="file-workbench-file">
+                                <div style="height: 25px; padding: 10px;display: flex; align-items:center;" class="file-workbench-file">
                                     <span style="flex: 1" class="file-name manifest-manager-canvas-name" data-bind="text: part.displayname + ' (' + part.type + ')'"></span>
                                     <div data-bind="visible: !part.hasCurrentObservation()">
                                         <i class="fa fa-lock" style="color: black"></i>
@@ -80,7 +83,7 @@
                                 value: selectedPartDefaultFormat,
                                 allowClear: true,
                                 multiple: false,
-                                placeholder: {% trans "'Available Formats'" %}}}" >
+                                placeholder: {% trans "'Choose a Default Text File Format'" %}}}" >
                     </div>
                     <div style="margin-bottom: 10px" data-bind="visible: selectedPartDefaultFormat() != undefined">
                         <span>{% trans "Default Text File Format" %}:</span>
