--- a/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
@@ -52,6 +52,14 @@
 
 </div>
 <!-- /ko -->
+
+<!-- ko ifnot: selectedFile -->
+<div style="width: 100%;height: 100%; display: flex;justify-content:center; align-items:center;">
+    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9;">
+        <span>{% trans "Select a dataset and file to set and view interpretation and parameters." %}</span>
+    </div>
+</div>
+<!-- /ko -->
 {% endblock content_management %}
 
 
@@ -110,7 +118,13 @@
         </div>
     </div>
     <div data-bind="visible: showFileInfo">
-        <button class="btn" style="background: #9490EE;color: #eee;" data-bind=" click: function(){showFileList(true); showFileInfo(false); selectedRenderer(undefined)}">
+        <button class="btn" style="background: #9490EE;color: #eee;" data-bind=" click: function(){
+            showFileList(true); 
+            showFileInfo(false); 
+            selectedRenderer(undefined);
+            selectedFile(undefined);
+            selectedFileFormat(undefined);
+        }">
             <i class="fa fa-list" style="color: #eee"></i> {% trans "Show File List" %}</button>
         
         <div style="margin-top: 10px">
