Remove some more, #1042

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -375,7 +375,7 @@ i.toggle:hover {
 }
 
 .afs-table-control i {
-    padding: 4px;
+    padding: 0px 4px;
     color: steelblue;
     font-size: 12px;
 }
