--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -565,6 +565,10 @@ i.toggle:hover {
     margin-bottom: -10px;
 }
 
+.afs-report-subsection-container .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    padding: 7px;
+}
+
 .afs-report-subsection-container table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:after, table.dataTable thead .sorting_desc:after, table.dataTable thead .sorting_asc_disabled:after, table.dataTable thead .sorting_desc_disabled:after {
     bottom: 6px;
 }
