--- a/afs/templates/views/components/workflows/review-dataset/select-dataset.htm
+++ b/afs/templates/views/components/workflows/review-dataset/select-dataset.htm
@@ -32,7 +32,7 @@
         <!-- /ko -->
 
         <!-- ko if: !relatedDigitalResources().length != 0 && physicalThingResourceId() != undefined -->
-        <div class="pad-hor rows option-input">
+        <div class="rows option-input">
             <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px 15px; background-color: #fde9ad;color: #666;">
                 <span>
                     {% trans "This physical thing has no digital resources.  Select another or run through the upload dataset workflow."%}
