--- a/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
@@ -54,11 +54,20 @@
 <!-- /ko -->
 
 <!-- ko ifnot: selectedFile -->
-<div style="width: 100%;height: 100%; display: flex;justify-content:center; align-items:center;">
-    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9;">
+<!-- ko if: activeTab() === 'edit' -->
+<div style="width: calc(100% - 400px); height: 100%; display: flex;justify-content:center; align-items:center;">
+    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 15px; background-color: #f9f9f9;">
         <span>{% trans "Select a dataset and file to set and view interpretation and parameters." %}</span>
     </div>
 </div>
+<!-- /ko -->
+<!-- ko ifnot: activeTab === 'edit' -->
+<div style="width: 100%; height: 100%; display: flex;justify-content:center; align-items:center;">
+    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 15px; background-color: #f9f9f9;">
+        <span>{% trans "Select a dataset and file to set and view interpretation and parameters." %}</span>
+    </div>
+</div>
+<!-- /ko -->
 <!-- /ko -->
 {% endblock content_management %}
 
