Update iiif thumbnail sizing; add border

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -859,6 +859,7 @@ a.afs-block-value-url {
     margin: 5px 10px 10px 0px;
 }
 
-.iiif-gallery-canvas-thumbnail img{
-    height: 200px;
+.afs-report-section .iiif-gallery-canvas-thumbnail img{
+    height: 350px;
+    border: 1px solid #343434;
 }
