Remove table presentation for node groups with cardinality=1; update CSS classes

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -863,3 +863,14 @@ a.afs-block-value-url {
     height: 350px;
     border: 1px solid #343434;
 }
+
+.afs-report-data-block {
+    font-size: 14px;
+    color:  #777;
+    margin:  0px 0px 30px 15px;
+}
+
+.afs-report-data-block a {
+    font-size: 14px;
+    color:  steelblue;
+}
